Fixes v2 - Jump removed. TODO: Slider

--- a/src/styles/stuff/_menu.scss
+++ b/src/styles/stuff/_menu.scss
@@ -1,6 +1,7 @@
 .menu {
 
   &__toggle {
+    display: none;
     opacity: 0;
     position: absolute;
     top: -100%;
